<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.blaq.drvme.LogPaymentInfomationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/splashlogo"
        app:srcCompat="@drawable/drvmelogocroped" />

    <TextView
        android:id="@+id/tv_regpaymentInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/card_infomation"
        android:textColor="@color/maintextcolor"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_regpaymentInfo"
        android:layout_marginTop="19dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_cardno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/card_no"
                android:inputType="number"
                android:textColorHint="@android:color/darker_gray" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/ty_cardtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center"
                android:hint="@string/select_card_type"
                android:textColorHint="@android:color/darker_gray" />

            <RadioGroup
                android:id="@+id/rgroup_cardtype"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbtn_mastercard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@android:drawable/btn_radio"
                    android:hint="@string/mastercard"
                    android:onClick="getCardType"
                    android:textColorHint="@android:color/darker_gray" />

                <RadioButton
                    android:id="@+id/rbtn_visa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@android:drawable/btn_radio"
                    android:hint="@string/visa"
                    android:onClick="getCardType"
                    android:textColorHint="@android:color/darker_gray" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/et_CVC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cvc_no"
                android:inputType="number"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/et_exp_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/expiry_date"
                android:inputType="date"
                android:textColorHint="@android:color/darker_gray" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/btn_submitReg"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/botton"
                android:text="@string/submit_reg" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/btn_skipCardInfo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/botton"
                android:onClick="goToHome"
                android:text="@string/skip_cardinfo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
