<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.blaq.drvme.RegisterActivity">

    <ImageView
        android:id="@+id/iv_Registerlogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/splashlogo"
        app:srcCompat="@drawable/drvmelogocroped" />

    <TextView
        android:id="@+id/tv_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_Registerlogo"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textColor="@color/maintextcolor"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_Register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textColorHighlight="@color/DrvmePink"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@color/DrvmePink" />

            <EditText
                android:id="@+id/et_reg_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textColorHighlight="@color/DrvmePink"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@color/DrvmePink" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/et_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textColorHighlight="@color/DrvmePink"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@color/DrvmePink" />

            <EditText
                android:id="@+id/et_reg_contactno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contact_number"
                android:inputType="phone"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textColorHighlight="@color/DrvmePink"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@color/DrvmePink" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/et_reg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textColorHighlight="@color/DrvmePink"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@color/DrvmePink" />

            <EditText
                android:id="@+id/et_retypepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/re_type_password"
                android:inputType="textPassword"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textColorHighlight="@color/DrvmePink"
                android:textColorHint="@android:color/darker_gray"
                android:textColorLink="@color/DrvmePink" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <Button
                android:id="@+id/btn_continueReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/botton"
                android:onClick="contReg"
                android:text="@string/continuereg" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
