<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.blaq.drvme.LoginActivity">

    <ImageView
        android:id="@+id/iv_loginlogo"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_above="@id/et_login_pass"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/splashlogo"
        android:padding="25dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/drvmelogocroped" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHighlight="@color/DrvmePink"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/DrvmePink" />

    <EditText
        android:id="@+id/et_login_pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_login_email"
        android:layout_alignStart="@+id/et_login_email"
        android:layout_below="@+id/et_login_email"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHighlight="@color/DrvmePink"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/DrvmePink" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/et_login_pass"
        android:layout_alignStart="@+id/et_login_pass"
        android:layout_below="@+id/et_login_pass"
        android:layout_marginTop="39dp"
        android:background="@drawable/botton"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:background="@drawable/botton"
        android:onClick="goToRegister"
        android:text="@string/register"
         />
</RelativeLayout>
