<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gmapseg"
    tools:context="com.example.blaq.drvme.HomeActivity">

    <ImageButton
        android:id="@+id/ibtn_SidebarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/sidebarview"
        app:srcCompat="@drawable/ic_menu_black_24dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ibtn_SidebarView"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@color/semitrans"
        android:drawableLeft="@drawable/ic_add_location_black_24dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_add_location_black_24dp"
        android:ems="10"
        android:hint="@string/where_to"
        android:inputType="textPostalAddress"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHighlight="@color/DrvmePink"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/DrvmePink"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_Requestnearby"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_above="@+id/btn_Bookforlater"
        android:layout_alignLeft="@+id/btn_Bookforlater"
        android:layout_alignStart="@+id/btn_Bookforlater"
        android:layout_marginBottom="13dp"
        android:background="@drawable/botton"
        android:text="@string/request_nearby_driver" />

    <Button
        android:id="@+id/btn_Bookforlater"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:background="@drawable/botton"
        android:text="@string/request_nearby_driver" />

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignTop="@+id/ibtn_SidebarView"
        android:background="@android:color/transparent"
        android:contentDescription="@string/logout"
        android:scaleType="fitCenter"
        android:onClick="logout"
        app:srcCompat="@drawable/logout_icon" />

</RelativeLayout>
